Add customer portal and license dispenser to fleetdm.com (#3546)
* Add images for customer portal, dashboard, and email templates

* updated email layout and reset password template, new email template

* update ajax-button component to have an optional spinner

* updated cloud-error & stripe-card-element component styles

* updates to user model, add quote and subscription

* Login, signup, forgot password, update profile

* link to customer portal from pricing

* new-license page, bootstrap updates

* create quote action, dashboard page, update routes

* Add new page styles to importer, update component styles

* updates to js-timestamp

* update modal styles and layout

* using @submitted on ajax form, controller updates

* Update create-quote.js

* updates to quote model, action updates, truncate license key on dashboard

* update email layout, subscribe action, user model

* Update importer.less

* style updates, order confirmation

* use correct font

* style updates

* create license key

* new-license page changes

* signup page changes

* add billing format to js-timestamp component, dashboard updates, change password

* swap get started link for customers

* order -> subscription

* Update login.ejs

* Lint fixes, page updates, mobile styles

* remove edit-profile route, update layout, bootstrap, forms

* change customer-layout name to match other layout names, update copyright year in layouts

* changes requested from code review and #3570

* submit button width, contact font-size

* Update dashboard.less

* Update bootstrap-overrides.less

* slack logo update, login text

--- a/website/assets/styles/components/stripe-card-element.component.less
+++ b/website/assets/styles/components/stripe-card-element.component.less
@@ -4,15 +4,18 @@
 [parasails-component='stripe-card-element'] {
   .card-element-wrapper {
     position: relative;
+    .form-control {
+      height: 40px;
+    }
     .card-element {
       padding-top: 0;
       padding-bottom: 0;
       padding-right: 30px;
       &.pseudofocused {
         // These should mimic your normal form inputs' :focus styles:
-        border-color: #80bdff;
+        border-color: #6a67fe;
         outline: 0;
-        box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+        box-shadow: none;
       }
     }
     .status-indicator {
