--- a/website/views/pages/pricing.ejs
+++ b/website/views/pages/pricing.ejs
@@ -84,13 +84,13 @@
                       (USD, billed annually at $12)
                     </p>
                   </div>
-                  <button
+                  <a
                     style="max-width: 242px"
                     class="btn btn-block btn-lg btn-info my-3 mx-auto"
-                    @click="clickChatButton()"
+                    href="/customers/register"
                   >
-                    Chat with us
-                  </button>
+                    Start now
+                  </a>
                   <div
                     style="max-width: 242px; min-height: 150px"
                     class="position-relative mx-auto mb-4"
