--- a/website/assets/styles/bootstrap-overrides.less
+++ b/website/assets/styles/bootstrap-overrides.less
@@ -111,11 +111,22 @@ a.text-danger:hover, a.text-danger:focus {
   }
 
   &.btn-info {
-    background-color: #6b6cfa;
-    border-color: #6b6cfa;
+    background-color: #6A67FE;
+    border-color: #6A67FE;
     &:hover {
-      background-color: darken(#6b6cfa, 10%);
-      border-color: darken(#6b6cfa, 10%);
+      background-color: #6A67FE;
+      border-color: #6A67FE;
+    }
+    &:not(:disabled):not(.disabled):active {
+      background-color: #6A67FE;
+      border-color: #6A67FE;
+    }
+    &:active:focus {
+      background-color: #6A67FE;
+      border-color: #6A67FE;
+    }
+    &:not(:disabled):not(.disabled):focus {
+      box-shadow: none;
     }
   }
 }
@@ -163,14 +174,18 @@ a.text-danger:hover, a.text-danger:focus {
 	border: 1px solid #C5C7D1;
 }
 .form-control:focus {
-	border: 2px solid #6a67fe;
+	border: 1px solid #6a67fe;
 	box-shadow: unset;
 }
 .form-control.is-invalid:focus {
 	box-shadow: unset;
 }
+.form-control.is-invalid::placeholder {
+  color: #FF5C83;
+}
 .form-control.is-invalid {
-	border: 2px solid #FF5C83;
+  color: #FF5C83;
+  border: 1px solid #FF5C83;
 }
 textarea.form-control {
 	height: 108px;
