--- a/website/assets/styles/components/modal.component.less
+++ b/website/assets/styles/components/modal.component.less
@@ -9,9 +9,10 @@
   [purpose='modal-dialog'] {
     z-index: 100;
     position: relative;
-    max-width: 700px;
+    // max-width: 800px;
     [purpose='modal-content'] {
-      max-width: 700px;
+      margin-top: 100px;
+      max-width: 480px;
       [purpose='modal-close-button'] {
         .btn-reset();
         opacity: 0.6;
@@ -24,6 +25,7 @@
   // Custom styles for the Bootstrap modal:
   // (Want to use Bootstrap's default styles? Just comment out the rest of the rules below)
   .petticoat {
+    display: none;
     position: fixed;
     width: 100%;
     height: 75px;// should cover topbar
@@ -33,12 +35,14 @@
     background-color: @accent-white;
   }
   .modal-content {
-    border-radius: 0px;
     border-color: @accent-white;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 25px;
-    padding-right: 25px;
+    box-shadow: 0px 4px 16px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    background-clip: border-box;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
     .modal-header {
       border-bottom: none;
       display: block;
@@ -85,8 +89,8 @@
 
 // Modal backdrop styles are exposed globally here because this gets appended to the <body>
 .modal-backdrop {
-  background-color: @accent-white;
+  background-color: #8b8fa2;
   &.show {
-    opacity: 0.95;
+    opacity: 0.45;
   }
 }
