--- a/website/assets/styles/importer.less
+++ b/website/assets/styles/importer.less
@@ -43,6 +43,8 @@
 @import 'pages/404.less';
 @import 'pages/500.less';
 @import 'pages/498.less';
+@import 'pages/customers/new-license.less';
+@import 'pages/customers/dashboard.less';
 
 @import 'pages/query-detail.less';
 @import 'pages/query-library.less';
