--- a/website/assets/styles/pages/entrance/forgot-password.less
+++ b/website/assets/styles/pages/entrance/forgot-password.less
@@ -1,5 +1,69 @@
 #forgot-password {
 
-  //…
+  h1 {
+    font-size: 28px;
+  }
+  a {
+    color: @core-vibrant-blue;
+  }
+  p {
+    font-size: 16px;
+  }
+
+  [purpose='customer-portal-form'] {
+
+    label {
+      font-weight: 700;
+      margin-bottom: 4px;
+    }
+    input {
+      height: 40px;
+      border-radius: 4px;
+    }
+    .card {
+      border-radius: 6px;
+    }
+    .card-body {
+      padding: 2em;
+    }
+  }
+  [purpose='submit-button'] {
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: flex;
+    span {
+      display: inline;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 16px;
+      line-height: 20px;
+      text-align: center;
+      font-weight: 400;
+    }
+
+  }
+
+  [purpose='back-button'] {
+    border-radius: 4px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display: inline-block;
+    width: 200px;
+    height: 40px;
+    span {
+      color: white;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      font-size: 16px;
+      line-height: 20px;
+      vertical-align: center;
+      font-weight: 400;
+    }
+  }
 
 }
