--- a/website/views/emails/email-reset-password.ejs
+++ b/website/views/emails/email-reset-password.ejs
@@ -1,9 +1,8 @@
 <% /* Note: This is injected into `views/layouts/layout-email.ejs` */ %>
-<p style="margin-bottom: 25px;">Dear <%= fullName %>,</p>
-<p style="margin-bottom: 25px;">Someone requested a password reset for your account. If this was not you, please disregard this email. Otherwise, simply click the button below:</p>
-<div style="margin-bottom: 25px; text-align: center;">
-  <a style="background-color: #00ACC4; display: inline-block; font-size: 1.1em; color: #fff; padding: 10px 35px 10px; font-weight: 500; text-decoration: none; border-radius: 7px;" href="<%= url.resolve(sails.config.custom.baseUrl,'/password/new')+'?token='+encodeURIComponent(token) %>">Update password</a>
-</div>
-<p style="margin-bottom: 25px;">If you have any trouble, try pasting this link in your browser: <a style="color: #00ACC4; word-wrap: break-word;" href="<%= url.resolve(sails.config.custom.baseUrl,'/password/new')+'?token='+encodeURIComponent(token) %>"><%= url.resolve(sails.config.custom.baseUrl,'/password/new')+'?token='+encodeURIComponent(token) %></a></p>
-<p style="margin-bottom: 5px;">Sincerely,</p>
-<p style="margin-top: 0px;">The NEW_APP_NAME Team</p>
+<h2 style="margin-bottom: 32px; font-size: 24px; font-style: normal; font-weight: 700; line-height: 33px; letter-spacing: 0em; text-align: left;">Reset your Fleet password</h2>
+<p style="margin-bottom: 32px;">Someone requested a password reset for your Fleet account.<br>Please click below to reset your password:</p>
+
+  <div style="background: #6A67FE; display: inline-block; color: white; text-decoration: none; border-radius: 4px; text-align: center; width: 151px; padding: 8px 16px 8px 16px" >
+    <a style="margin: auto; font-size: 16px; text-decoration: none; color: white; line-height: 22px;" href="<%= url.resolve(sails.config.custom.baseUrl,'/customers/new-password')+'?token='+encodeURIComponent(token) %>">Update password</a>
+  </div>
+  <p style="margin-bottom: 32px; padding-top: 32px; font-style: italic;"> If you did not make the request, you may ignore this email as no changes have been made.</p>
