--- a/website/views/pages/entrance/forgot-password.ejs
+++ b/website/views/pages/entrance/forgot-password.ejs
@@ -1,21 +1,23 @@
 <div id="forgot-password" v-cloak>
   <div style="max-width:  480px;" class="container-fluid pt-5 pb-5">
-    <h1 class="text-left pb-3">Forgot your password?</h1>
-    <div class="card card-body mx-auto" v-if="!cloudSuccess">
-      <ajax-form action="sendPasswordRecoveryEmail" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
-        <div class="form-group">
-          <label for="email-address">Email</label>
-          <span style="float: right" class="text-right"><a href="/customers/login">I have an account</a></span>
-          <input type="email" name="email-address" class="form-control" placeholder="example@email.com" :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" autocomplete="email" focus-first>
-          <div class="invalid-feedback" v-if="formErrors.emailAddress">Please enter a valid email address.</div>
-        </div>
-        <cloud-error v-if="cloudError"></cloud-error>
-        <ajax-button purpose="submit-button" type="submit" :syncing="syncing" class="btn-info btn-lg btn-block">Reset password</ajax-button>
-      </ajax-form>
+    <div v-if="!cloudSuccess">
+    <h1 class="text- pb-3">Forgot your password?</h1>
+      <div purpose="customer-portal-form" class="card card-body mx-auto">
+        <ajax-form  action="sendPasswordRecoveryEmail" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
+          <div class="form-group">
+            <label for="email-address">Email</label>
+            <span style="float: right" class="text-right"><a href="/customers/login">I have an account</a></span>
+            <input type="email" name="email-address" class="form-control" placeholder="example@email.com" :class="[formErrors.emailAddress ? 'is-invalid' : '']" v-model.trim="formData.emailAddress" autocomplete="email" focus-first>
+            <div class="invalid-feedback" v-if="formErrors.emailAddress">Please enter a valid email address.</div>
+          </div>
+          <cloud-error v-if="cloudError"></cloud-error>
+          <ajax-button purpose="submit-button" type="submit" :syncing="syncing" class="btn-info btn-lg btn-block">Reset password</ajax-button>
+        </ajax-form>
+      </div>
     </div>
-    <div style="max-width:  450px;" class="mx-auto text-center" v-else>
+    <div style="max-width:  480px;" class="mx-auto text-center" v-else>
+      <h1 class="text-center pb-3">Password recovery sent</h1>
       <p>We've sent you a link to update your password.</p>
-      <hr/>
       <p>
       If the email you entered is associated with a Fleet account, you should receive a recovery email shortly. If the email doesn’t arrive, please try again, or <a href="/contact">contact support</a>.
       </p>
