--- a/website/views/pages/entrance/forgot-password.ejs
+++ b/website/views/pages/entrance/forgot-password.ejs
@@ -1,7 +1,7 @@
 <div id="forgot-password" v-cloak>
   <div style="max-width:  480px;" class="container-fluid pt-5 pb-5">
     <div v-if="!cloudSuccess">
-    <h1 class="text- pb-3">Forgot your password?</h1>
+    <h1 class="text-left pb-3">Forgot your password?</h1>
       <div purpose="customer-portal-form" class="card card-body mx-auto">
         <ajax-form  action="sendPasswordRecoveryEmail" :syncing.sync="syncing" :cloud-error.sync="cloudError" :form-data="formData" :form-rules="formRules" :form-errors.sync="formErrors" @submitted="submittedForm()">
           <div class="form-group">
