--- a/website/assets/styles/bootstrap-overrides.less
+++ b/website/assets/styles/bootstrap-overrides.less
@@ -51,6 +51,10 @@ footer {
   line-height: 24px;
 }
 
+.small {
+  font-size: 14px;
+}
+
 .text-danger {
   color: @core-vibrant-red !important; //lesshint-disable-line importantRule
 }
