--- a/website/assets/styles/pages/entrance/forgot-password.less
+++ b/website/assets/styles/pages/entrance/forgot-password.less
@@ -1,5 +1,5 @@
 #forgot-password {
-
+  padding-top: 80px;
   h1 {
     font-size: 28px;
   }
@@ -27,6 +27,7 @@
       padding: 2em;
     }
   }
+
   [purpose='submit-button'] {
     width: 200px;
     margin-left: auto;
