--- a/website/assets/styles/pages/entrance/signup.less
+++ b/website/assets/styles/pages/entrance/signup.less
@@ -1,12 +1,10 @@
 #signup {
+  padding-top: 80px;
   h1 {
     font-size: 28px;
   }
   a {
     color: @core-vibrant-blue;
-  }
-  p {
-    font-size: 16px;
   }
 
   [purpose='customer-portal-form'] {
@@ -22,12 +20,12 @@
       border-radius: 6px;
     }
     .card-body {
-      padding: 30px;
+      padding: 2em;
     }
   }
 
   [purpose='submit-button'] {
-    width: 200px;
+
     margin-left: auto;
     margin-right: auto;
     border-radius: 4px;
@@ -47,7 +45,8 @@
   }
 
   [purpose='features-list'] {
-    // min-width: 254px;
+    padding-left: 40px;
+    font-size: 14px;
     word-wrap: overflow;
    ul {
      list-style-type: none;
@@ -64,6 +63,14 @@
     margin-right: 8px;
    }
 
+  }
+
+  @media (max-width: 768px) {
+    padding-top: 60px;
+  }
+
+  @media (max-width: 576px) {
+    padding-top: 40px;
   }
 
 }
