--- a/website/assets/styles/pages/entrance/new-password.less
+++ b/website/assets/styles/pages/entrance/new-password.less
@@ -1,4 +1,5 @@
 #new-password {
+  padding-top: 80px;
   h1 {
     font-size: 28px;
   }
@@ -26,7 +27,7 @@
       border-radius: 6px;
     }
     .card-body {
-      padding: 30px;
+      padding: 2em;
     }
   }
 
@@ -67,6 +68,13 @@
     margin-right: 8px;
    }
 
+  }
+  @media (max-width: 768px) {
+    padding-top: 60px;
+  }
+
+  @media (max-width: 576px) {
+    padding-top: 40px;
   }
 
 }
