changes from fine art pass 2

--- a/website/assets/styles/pages/customers/new-license.less
+++ b/website/assets/styles/pages/customers/new-license.less
@@ -3,6 +3,7 @@
 
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   a {
     color: @core-vibrant-blue;
@@ -94,7 +95,7 @@
     padding-top: 40px;
     [purpose='customer-portal-form'] {
       .card-body {
-        padding: 16px;
+        padding: 1.5em 1em;
       }
     }
   }
