--- a/website/assets/styles/pages/entrance/new-password.less
+++ b/website/assets/styles/pages/entrance/new-password.less
@@ -2,6 +2,7 @@
   padding-top: 80px;
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   a {
     color: @core-vibrant-blue;
@@ -75,6 +76,11 @@
 
   @media (max-width: 576px) {
     padding-top: 40px;
+    [purpose='customer-portal-form'] {
+      .card-body {
+        padding: 1.5em 1em;
+      }
+    }
   }
 
 }
