--- a/website/assets/styles/pages/customers/dashboard.less
+++ b/website/assets/styles/pages/customers/dashboard.less
@@ -2,6 +2,7 @@
   padding-top: 80px;
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   h3 {
     padding-bottom: 16px;
@@ -132,6 +133,22 @@
     p {
       margin-block-end: 4px;
     }
+    [purpose='contact'] {
+      background: #F1F0FF;
+      border: 1px solid #D9D9FE;
+      box-sizing: border-box;
+      border-radius: 4px;
+      padding: 16px;
+      p {
+        font-size: 14px;
+        margin-block-end: 0px;
+      }
+      a {
+        font-size: 14px;
+        font-weight: 700;
+        text-underline-offset: 5px;
+      }
+    }
 
   }
 
@@ -151,6 +168,7 @@
     }
 
     strong {
+      font-size: 14px;
       padding-bottom: 8px;
     }
 
@@ -185,16 +203,21 @@
 
   }
 
+
   @media (max-width: 991px) {
 
     [purpose='details-card'] {
       min-height: auto;
     }
+    [purpose='billing-card'] {
+      padding: 40px;
+      min-height: 312px;
 
 
   }
 
   @media (max-width: 768px) {
+    padding-top: 60px;
 
     [purpose='modal-content'] {
       margin-top: 50px;
@@ -212,6 +235,16 @@
 
     [purpose='billing-card'] {
       padding: 40px 20px;
+    }
+  }
+
+
+  @media (max-width: 576px) {
+    padding-top: 40px;
+    [purpose='customer-portal-form'] {
+      .card-body {
+        padding: 1em;
+      }
     }
   }
 
