--- a/website/assets/styles/pages/entrance/forgot-password.less
+++ b/website/assets/styles/pages/entrance/forgot-password.less
@@ -2,6 +2,7 @@
   padding-top: 80px;
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   a {
     color: @core-vibrant-blue;
@@ -66,5 +67,19 @@
       font-weight: 400;
     }
   }
+
+  @media (max-width: 768px) {
+    padding-top: 60px;
+  }
+
+  @media (max-width: 576px) {
+    padding-top: 40px;
+    [purpose='customer-portal-form'] {
+      .card-body {
+        padding: 1.5em 1em;
+      }
+    }
+  }
+
 
 }
