--- a/website/assets/styles/pages/entrance/login.less
+++ b/website/assets/styles/pages/entrance/login.less
@@ -4,6 +4,7 @@
 
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   a {
     color: @core-vibrant-blue;
@@ -72,6 +73,11 @@
 
   @media (max-width: 576px) {
     padding-top: 40px;
+    [purpose='customer-portal-form'] {
+      .card-body {
+        padding: 1em;
+      }
+    }
   }
 
 }
