--- a/website/assets/styles/pages/entrance/signup.less
+++ b/website/assets/styles/pages/entrance/signup.less
@@ -2,6 +2,7 @@
   padding-top: 80px;
   h1 {
     font-size: 28px;
+    line-height: 38px;
   }
   a {
     color: @core-vibrant-blue;
@@ -11,7 +12,7 @@
     label {
       font-weight: 700;
       margin-bottom: 4px;
-    }
+    }d
     .form-control {
       height: 40px;
       border-radius: 6px;
@@ -48,11 +49,11 @@
     padding-left: 40px;
     font-size: 14px;
     word-wrap: overflow;
-   ul {
+    ul {
      list-style-type: none;
      padding-inline-start: 0px;
-   }
-   li {
+    }
+    li {
     padding-bottom: 12px;
     color: @core-fleet-black-75;
     white-space: nowrap;
@@ -71,6 +72,11 @@
 
   @media (max-width: 576px) {
     padding-top: 40px;
+    [purpose='customer-portal-form'] {
+      .card-body {
+        padding: 1.5em 1em;
+      }
+    }
   }
 
 }
