--- a/website/views/pages/customers/dashboard.ejs
+++ b/website/views/pages/customers/dashboard.ejs
@@ -4,19 +4,19 @@
       <h3>Your license</h3>
       <div purpose="license-card" class="card card-body">
         <div class="row">
-          <div class="col-6 col-lg-2">
+          <div class="col-12 col-md-6 col-lg-2">
             <strong>Item</strong>
             <p>Fleet Premium</p>
           </div>
-          <div class="col-6 col-lg-2">
+          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-lg-0">
             <strong>Cost</strong>
             <p>${{thisSubscription.subscriptionPrice}}.00/year</p>
           </div>
-          <div class="col-6 col-lg-2 pt-3 pt-lg-0">
+          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-lg-0">
             <strong>No. of devices</strong>
             <p>{{thisSubscription.numberOfHosts}}</p>
           </div>
-          <div class="col-6 col-lg-2 pt-3 pt-lg-0">
+          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-lg-0">
             <strong>Expires</strong>
             <p><js-timestamp :at="thisSubscription.nextBillingAt" always-show-year format="billing"></js-timestamp></p>
           </div>
@@ -28,34 +28,34 @@
       </div>
     </div>
 
-    <div class="row pt-3">
+    <div class="row pt-0 pt-lg-3">
       <div class="col-12 col-lg-6">
       <h3 class="pb-4 pb-xl-3">Your details</h3>
         <div purpose="details-card" class="card card-body justify-content-top">
           <div class="row">
-            <div class="col-sm-4 col-12 ">Organization:</div>
-            <div class="col-sm-8 col-12 text-right">
+            <div class="col-sm-4 col-12 pb-2 pb-sm-0">Organization:</div>
+            <div class="col-sm-8 col-12 text-left text-sm-right">
               <strong>{{me.organization}}</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
             </div>
           </div>
           <hr/>
           <div class="row">
-            <div class="col-sm-3 col-12 ">Name:</div>
-            <div class="col-sm-9 col-12 text-right">
+            <div class="col-sm-3 col-12 pb-2 pb-sm-0">Name:</div>
+            <div class="col-sm-9 col-12 text-left text-sm-right">
               <strong>{{me.firstName}} {{me.lastName}}</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
             </div>
           </div>
           <hr/>
           <div class="row">
-            <div class="col-sm-3 col-12 ">Email:</div>
-            <div class="col-sm-9 col-12 text-right">
+            <div class="col-sm-3 col-12 pb-2 pb-sm-0">Email:</div>
+            <div class="col-sm-9 col-12 text-left text-sm-right">
               <strong :class="[me.emailStatus === 'unconfirmed' || me.emailStatus === 'change-requested' ? 'text-muted' : '']">{{me.emailChangeCandidate ? me.emailChangeCandidate : me.emailAddress}}</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickEditButton()">
             </div>
           </div>
           <hr/>
           <div class="row">
-            <div class="col-sm-4 col-12 ">Password:</div>
-            <div class="col-sm-8 col-12 text-right">
+            <div class="col-sm-4 col-12 pb-2 pb-sm-0">Password:</div>
+            <div class="col-sm-8 col-12 text-left text-sm-right">
               <strong>••••••••</strong><img purpose="edit-button" src="/images/icon-pencil-24x24@2x.png" alt="A pencil icon indicating that this information can be editted" @click="clickChangePassword()">
             </div>
           </div>
@@ -82,7 +82,7 @@
             <div purpose="contact">
             <div class="row">
               <div style="max-width: 32px;" class="col-1 pr-0">
-                <img style="display: inline-block; height: 16px; width: 16px; margin-top: 3px;" src="/images/info-16x16@2x.png" alt="An icon indicating that this section has important information">
+                <img style="display: inline-block; height: 16px; width: 16px; margin-top: -3px;" src="/images/info-16x16@2x.png" alt="An icon indicating that this section has important information">
               </div>
               <div class="col ml-1 pl-1 small">
                 <p class="small"><a href="/contact" target="_blank">Contact us</a> to change your number of devices, or to <strong>cancel</strong> your subscription.</p>
@@ -93,11 +93,11 @@
       </div>
 
     </div>
-    <div class="pt-4 d-block">
-        <a class="btn btn-info btn-sm mr-md-3 mb-3 mb-md-0" purpose="deploy-button" href="/docs/deploying/introduction">
+    <div class="pt-4 d-flex flex-md-row flex-column">
+        <a class="btn btn-info btn-sm btn-md-block mr-md-3 mb-3 mb-md-0" purpose="deploy-button" href="/docs/deploying/introduction">
           How to deploy Fleet
         </a>
-        <a class="btn btn-outline-secondary btn-sm" purpose="slack-button" href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank">
+        <a class="btn btn-outline-secondary btn-sm btn-md-block" purpose="slack-button" href="https://osquery.slack.com/join/shared_invite/zt-h29zm0gk-s2DBtGUTW4CFel0f0IjTEw#/" target="_blank">
           <img alt="Slack logo" src="/images/logo-slack-24x24@2x.png"/>
           Ask for help on Slack
         </a>
