--- a/website/assets/styles/pages/customers/dashboard.less
+++ b/website/assets/styles/pages/customers/dashboard.less
@@ -210,9 +210,9 @@
       min-height: auto;
     }
     [purpose='billing-card'] {
-      padding: 40px;
-      min-height: 312px;
-
+      // padding: 40px;
+      min-height: auto;
+    }
 
   }
 
