--- a/website/assets/styles/pages/entrance/signup.less
+++ b/website/assets/styles/pages/entrance/signup.less
@@ -12,7 +12,7 @@
     label {
       font-weight: 700;
       margin-bottom: 4px;
-    }d
+    }
     .form-control {
       height: 40px;
       border-radius: 6px;
