changes from call

--- a/website/assets/styles/pages/customers/new-license.less
+++ b/website/assets/styles/pages/customers/new-license.less
@@ -15,6 +15,7 @@
   h3 {
     font-size: 20px;
     font-weight: 700;
+    margin-bottom: 0px;
   }
 
   input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
