--- a/website/views/pages/customers/dashboard.ejs
+++ b/website/views/pages/customers/dashboard.ejs
@@ -8,19 +8,19 @@
             <strong>Item</strong>
             <p>Fleet Premium</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-lg-0">
+          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-md-0">
             <strong>Cost</strong>
             <p>${{thisSubscription.subscriptionPrice}}.00/year</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-lg-0">
+          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-md-0">
             <strong>No. of devices</strong>
             <p>{{thisSubscription.numberOfHosts}}</p>
           </div>
-          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-lg-0">
+          <div class="col-12 col-md-6 col-lg-2 pt-3 pt-md-0">
             <strong>Expires</strong>
             <p><js-timestamp :at="thisSubscription.nextBillingAt" always-show-year format="billing"></js-timestamp></p>
           </div>
-          <div class="col-12 col-lg-4 pt-3 pt-lg-0">
+          <div class="col-12 col-lg-4 pt-3 pt-md-0">
             <strong>License key</strong><img class="d-inline-block ml-2" style="width: 15px; height: 16px; cursor: pointer;" src="/images/icon-copy-15x16@2x.png" alt="click here to copy your license key" @click="clickCopyLicenseKey()"><span purpose="copied-notification">License key copied!</span>
             <p><span purpose="license-key" @click="clickExpandLicenseKey()">{{thisSubscription.fleetLicenseKey}}</span></p>
           </div>
@@ -30,7 +30,7 @@
 
     <div class="row pt-0 pt-lg-3">
       <div class="col-12 col-lg-6">
-      <h3 class="pb-4 pb-xl-3">Your details</h3>
+      <h3 class="pb-3 pb-xl-3">Your details</h3>
         <div purpose="details-card" class="card card-body justify-content-top">
           <div class="row">
             <div class="col-sm-4 col-12 pb-2 pb-sm-0">Organization:</div>
@@ -63,7 +63,7 @@
       </div>
 
       <div class="col-12 col-lg-6 pt-4 pt-lg-0">
-        <h3 class="pb-4 pb-xl-3">Billing and payment</h3>
+        <h3 class="pb-3 pb-xl-3">Billing and payment</h3>
         <div purpose="billing-card" class="card card-body justify-content-center">
           <div class="row pb-3 mx-0">
             <div style="max-width: 16px;" class="col-1 px-0"><img style="margin-top: 5px; height: 12px; width: 16px;" src="/images/icon-card-32x24@2x.png" alt="A credit card Icon"></div>
