--- a/website/views/pages/customers/new-license.ejs
+++ b/website/views/pages/customers/new-license.ejs
@@ -68,7 +68,7 @@
 
   <div style="max-width: 650px;" class="container-fluid pb-5 text-center" v-else>
     <h1>Thank you, your order is complete.</h1>
-    <p class="mb-4 text-bold">Welcome to your admin dashboard.</p>
+    <p class="mb-4 font-weight-bold">Welcome to your admin dashboard.</p>
     <p>From here you can access your license key, change your details and update your payment method.</p>
     <ajax-button style="height: 40px; font-size: 14px; line-height: 24px; width: 200px" type="submit" purpose="submit-button" :syncing="syncing" spinner="true" class="btn btn-block btn-lg btn-info mx-auto" @click="clickGoToDashboard()">Contine to dashboard</ajax-button>
   </div>
